# bj-ai-assistant

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  requirements.txt
bj_assistant/: __init__.py  auto_calibrate.py  capture.py  card_detector.py  cli.py  config.py  engine.py  game_detector.py  overlay.py  strategy.py
config/: settings.yaml
tests/: test_capture.py  test_strategy.py
