[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bj-ai-assistant"
version = "0.1.0"
description = "Real-time BlackJack AI assistant with card detection, optimal strategy, and live HUD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "pure-python-adb>=0.3.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
]

[project.scripts]
bj-assistant = "bj_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["bj_assistant*"]
