[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bj-ai-assistant"
version = "0.1.0"
description = "Real-time BlackJack AI assistant with card detection, optimal strategy, and live HUD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "pytesseract>=0.3.10",
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
bj-assistant = "bj_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["bj_assistant*"]
